<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userNameAbout">Your name</string>
    <string name="question">Your question</string>
    <string name="answer">Answer</string>
    <string name="userAnswer">Your answer</string>
    <string name="score">Score</string>
    <string name="showAbout">Show game infos</string>
    <string name="fullname">Choose a nickname</string>
</resources>